[package]
name = "lsp-codec"
version = "0.2.0"
authors = ["Igor Matuszewski <Xanewok@gmail.com>"]
edition = "2018"
description = "Simple Tokio 0.1-based Codec implementation for Language Server Protocol."
repository = "https://github.com/Xanewok/lsp-codec"
license = "MIT"
readme = "README.md"

[dependencies]
tokio-util = { version = "0.6", default-features = false, features = ["codec"] }
bytes = "0.5"
serde_json = "1.0"

[dev-dependencies]
tokio = { version = "0.2", features = ["io-util"] }
futures = { version = "0.3", default-features = false }
