[package]
name = "lsp-codec"
version = "0.3.0"
authors = ["Igor Matuszewski <Xanewok@gmail.com>"]
edition = "2018"
description = "Simple Tokio-compatible codec implementation for Language Server Protocol."
repository = "https://github.com/Xanewok/lsp-codec"
license = "MIT"
readme = "README.md"

[dependencies]
tokio-util = { version = "0.6", default-features = false, features = ["codec"] }
bytes = "1.0"
serde_json = "1.0"

[dev-dependencies]
tokio = { version = "1.0", features = ["rt-multi-thread", "io-util"] }
tokio-stream = "0.1"
futures = { version = "0.3", default-features = false }
